[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Scripts/Fence.gd" type="Script" id=1]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec2 red_displacement = vec2(0.008, 0.013);
uniform vec2 green_displacement = vec2(0, 0);
uniform vec2 blue_displacement = vec2(0.0013, 0.008);

void fragment() 
{
	COLOR.r = textureLod(SCREEN_TEXTURE, SCREEN_UV + red_displacement, 0.0).r;
	COLOR.g = textureLod(SCREEN_TEXTURE, SCREEN_UV + green_displacement, 0.0).g;
	COLOR.b = textureLod(SCREEN_TEXTURE, SCREEN_UV + blue_displacement, 0.0).b;
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/red_displacement = Vector2( 0.008, 0.013 )
shader_param/green_displacement = Vector2( 0, 0 )
shader_param/blue_displacement = Vector2( 0.0013, 0.008 )

[node name="Fence" type="Area2D"]
collision_layer = 64
collision_mask = 8
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="FenceVisual" type="Polygon2D" parent="."]
visible = false
material = SubResource( 2 )

[connection signal="child_entered_tree" from="." to="." method="_on_Fence_child_entered_tree"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
